--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,15 @@
         "leodisarli/disarli-password-hasher-php": "^1.0",
         "leodisarli/disarli-response-json-php": "^1.0",
         "leodisarli/disarli-ulid-php": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/lumen-framework": "5.8.*",
-        "sentry/sentry-laravel": "1.1.0",
-        "vlucas/phpdotenv": "^3.3"
+        "laravel/lumen-framework": "^7.0",
+        "sentry/sentry-laravel": "^1.8.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": "~7.0",
-        "squizlabs/php_codesniffer": "^3.4"
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "phpmd/phpmd": "^2.8",
+        "phpunit/phpunit": "^9.1",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "classmap": [
@@ -46,8 +44,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-install-cmd": [
-            "bash contrib/setup.sh",
-            "chmod 777 -R /storage"
+            "bash contrib/setup.sh"
         ],
         "checkall" : [
             "@lint",
@@ -128,7 +125,8 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "disable-tls": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
